--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.11.0",
-    "framer-motion": "^10.16.0",
+    "motion": "^10.16.0",
     "lucide-react": "^0.525.0",
     "next": "^15.4.4",
     "react": "^19.1.0",
@@ -32,6 +32,5 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
-  },
-  "packageManager": "yarn@3.2.3+sha512.f26f951f67de0c6a33ee381e5ff364709c87e70eb5e65c694e4facde3512f1fa80b8679e6ba31ce7d340fbb46f08dd683af9457e240f25a204be7427940d767e"
+  }
 }
