--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@heroicons/react": "^2.2.0",
+    "@okxconnect/ui": "^1.8.8",
+    "@okxconnect/universal-provider": "^1.8.8",
     "@rainbow-me/rainbowkit": "^2.1.3",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.11.0",
-    "motion": "^10.16.0",
     "lucide-react": "^0.525.0",
+    "motion": "^10.16.0",
     "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
