fixed stocks top20, price api

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,16 @@
 # Alpaca API Configuration
-ALPACA_API_KEY_ID=your_alpaca_api_key_id
-ALPACA_API_SECRET_KEY=your_alpaca_secret_key
+ALPACA_API_KEY_ID=PK5P1IP2GTE0V4NDPR1W
+ALPACA_API_SECRET_KEY=XOuDfN2xUTgGRQaHlkitYrHe49DVQmgs2c7S8fZN
 # Use https://api.alpaca.markets for live trading
 # Use https://paper-api.alpaca.markets for paper trading (default)
-ALPACA_API_BASE_URL=https://paper-api.alpaca.markets
+ALPACA_API_BASE_URL=https://paper-api.alpaca.markets/v2
+ALPACA_API_DATA_URL=https://data.alpaca.markets
 
 # OKX DEX API Configuration
-OKX_API_KEY=your_okx_api_key
-OKX_SECRET_KEY=your_okx_secret_key
-OKX_API_PASSPHRASE=your_okx_api_passphrase
-OKX_PROJECT_ID=your_okx_project_id
+OKX_API_KEY=2928c969-7774-4b2f-ad9f-7a22731e95f1
+OKX_SECRET_KEY=24C7FE833C938DD3AC40C392E4619666
+OKX_API_PASSPHRASE=Test123!
+OKX_PROJECT_ID=5a030a3ba12ecb3e3f61d324d88b748f
 
 # Server Configuration (optional)
 RUST_LOG=info
